[package]
name = "coreaudio-ios-example"
version = "0.9.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>", "yupferris <jake@fusetools.com>", "Sebastian Imlay <sebastian.imlay@gmail.com>"]
description = "An iOS example for coreaudio-rs"
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "coreaudio_ios_example"
crate-type = ["staticlib"]

[dependencies]
coreaudio-rs = { path = "../../" }
